# gfb-stdgo

./: .bettercodehub.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bootstrap.sh  io.cpp  strings.cpp  strings.h  time.cpp  utf8.cpp
examples/001-net-http-get-request/: CMakeLists.txt  main.cpp
include/: all.h  channel.h  io.h  strings-templates.h  strings.h  time.h  time_win32.h  types.h  utf8.h
include/net/: http.h
src/: CMakeLists.txt  io.cpp  strings.cpp  time.cpp  utf8.cpp
src/net/: http.cpp
test/: CMakeLists.txt  main.cpp
test/scripts/: bootstrap.sh
test/src/: strings.cpp  time.cpp
win32/: README.md
